update test-spec format and checks